cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_COMPILER "/usr/bin/clang")
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
add_definitions("-Wall -Werror")

project(OpenCV3-examples)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
add_subdirectory(src/【1】第一章)
add_subdirectory(src/【2】第二章)
add_subdirectory(src/【3】第三章)
add_subdirectory(src/【4】第四章)
add_subdirectory(src/【5】第五章)
add_subdirectory(src/【6】第六章)
add_subdirectory(src/【7】第七章)
add_subdirectory(src/【8】第八章)
add_subdirectory(src/【9】第九章)
add_subdirectory(src/【10】第十章)
