add_subdirectory(【56】canny函数用法示例/56_canny函数用法示例)
add_subdirectory(【57】sobel函数用法示例/57_sobel函数用法示例)
add_subdirectory(【58】Laplacian函数用法示例/58_Laplacian函数用法示例)
add_subdirectory(【59】Scharr函数用法示例/59_Scharr函数用法示例)
add_subdirectory(【60】边缘检测综合示例/60_边缘检测综合示例)
add_subdirectory(【61】HoughLines函数用法示例/61_HoughLines函数用法示例)
add_subdirectory(【62】HoughLinesP函数用法示例/62_HoughLinesP函数用法示例)
add_subdirectory(【63】HoughCircles函数用法示例/63_HoughCircles函数用法示例)
add_subdirectory(【64】霍夫线变换综合示例/64_霍夫线变换综合示例)
add_subdirectory(【65】remap函数用法示例/65_remap函数用法示例)
add_subdirectory(【66】实现多种重映射综合示例/66_实现多种重映射综合示例)
add_subdirectory(【67】仿射变换综合示例/67_仿射变换综合示例)
add_subdirectory(【68】直方图均衡化/68_直方图均衡化)
